Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ steps:
   inputs:
     terraformVersion: 'latest'
 - task: TerraformTask@5
-displayName: Terraform Init
+  displayName: Terraform Init
   inputs:
     provider: 'azurerm'
     command: 'init'
@@ -18,8 +18,16 @@ displayName: Terraform Init
     backendAzureRmKey: 'infra.tfstate'
 
 - task: TerraformTask@5
-displayName: Terraform Validate
+  displayName: Terraform Validate
   inputs:
     provider: 'azurerm'
     command: 'validate'
     workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+
+- task: TerraformTask@5
+  displayName: Terraform Plan
+  inputs:
+    provider: 'azurerm'
+    command: 'plan'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+    environmentServiceNameAzureRM: 'servconn'
