--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ stages:
       - job: initValidatePlanJob
         displayName: initValidatePlan
         steps:
-        - task: TerraformInstaller@1
-          inputs:
-            terraformVersion: 'latest'
+        # - task: TerraformInstaller@1
+        #   inputs:
+        #     terraformVersion: 'latest'
         - task: TerraformTask@5
           displayName: Terraform Init
           inputs:
